--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
 	"name": "angular-vk-photos",
 	"version": "0.0.0",
 	"scripts": {
-		"ng": "ng",
-		"start": "ng serve",
-		"build": "ng build"
+		"dev": "ng serve",
+		"build": "ng build --prod"
 	},
 	"private": true,
 	"dependencies": {
