--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "angular-vk-photos",
-	"version": "0.0.0",
+	"version": "1.0.0",
 	"scripts": {
 		"dev": "ng serve",
-		"build": "ng build --prod"
+		"start": "node server.js",
+		"build": "ng build --prod --aot"
 	},
-	"private": true,
 	"dependencies": {
 		"@angular/animations": "~7.0.0",
 		"@angular/common": "~7.0.0",
@@ -18,6 +18,7 @@
 		"@angular/router": "~7.0.0",
 		"bootstrap": "^4.1.3",
 		"core-js": "^2.5.4",
+		"express": "^4.16.4",
 		"jquery": "^3.3.1",
 		"normalize.css": "^8.0.1",
 		"popper.js": "^1.14.5",
