--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
 	"name": "angular-vk-photos",
 	"version": "1.0.0",
+	"license": "MIT",
 	"scripts": {
 		"dev": "ng serve",
 		"start": "node server.js",
 		"build": "ng build --prod --aot"
 	},
 	"dependencies": {
+		"@angular-devkit/build-angular": "^0.10.6",
 		"@angular/animations": "~7.0.0",
+		"@angular/cli": "~7.0.5",
 		"@angular/common": "~7.0.0",
 		"@angular/compiler": "~7.0.0",
+		"@angular/compiler-cli": "^7.0.4",
 		"@angular/core": "~7.0.0",
 		"@angular/forms": "~7.0.0",
 		"@angular/http": "~7.0.0",
+		"@angular/language-service": "^7.0.4",
 		"@angular/platform-browser": "~7.0.0",
 		"@angular/platform-browser-dynamic": "~7.0.0",
 		"@angular/router": "~7.0.0",
@@ -23,17 +28,13 @@
 		"normalize.css": "^8.0.1",
 		"popper.js": "^1.14.5",
 		"rxjs": "~6.3.3",
+		"ts-node": "~7.0.0",
+		"typescript": "~3.1.6",
 		"zone.js": "~0.8.26"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "~0.10.0",
-		"@angular/cli": "~7.0.5",
-		"@angular/compiler-cli": "~7.0.0",
-		"@angular/language-service": "~7.0.0",
 		"@types/node": "~8.9.4",
 		"codelyzer": "^4.5.0",
-		"ts-node": "~7.0.0",
-		"tslint": "~5.11.0",
-		"typescript": "~3.1.6"
+		"tslint": "~5.11.0"
 	}
 }
